<resources>
    <string name="app_name">pertemuan 4  PPAB</string>
    <string name="calculator_app">Calculator App</string>
    <string name="_500_x_120">500 X 120</string>
    <string name="_60_000">60.000</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="plus">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="slash">/</string>
    <string name="_0">0</string>
</resources>