<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    tools:ignore="MissingClass">

    <TextView
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/calculator_app"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/perkalian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="20dp"
        android:text="@string/_500_x_120"
        android:textColor="@color/black"
        android:textSize="20sp"
       app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/_60_000"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/perkalian"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <View
        android:id="@+id/horizontalLine"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/number7"
        android:layout_width="86dp"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        android:layout_marginLeft="8dp"
        android:background="@color/lightblue"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/_7"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543" />
    <Button
        android:id="@+id/number8"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/lightblue"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/_8"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/number7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542" />
    <Button
        android:id="@+id/number9"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/lightblue"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/_9"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/number8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542" />
    <Button
        android:id="@+id/plus"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/lightblue"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/plus"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/number9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542" />



    <Button
        android:id="@+id/number4"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/lightblue"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/_4"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number7" />

    <Button
        android:id="@+id/number5"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/lightblue"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/_5"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@id/number4"
        app:layout_constraintTop_toBottomOf="@id/number7" />

    <Button
        android:id="@+id/number6"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/lightblue"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/_6"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@id/number5"
        app:layout_constraintTop_toBottomOf="@id/number7" />


    <Button
        android:id="@+id/minus"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/lightblue"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/minus"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@id/number6"
        app:layout_constraintTop_toBottomOf="@id/number7" />

    <Button
        android:id="@+id/number1"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/lightblue"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/_1"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number4" />

    <Button
        android:id="@+id/number2"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/lightblue"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/_2"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@id/number1"
        app:layout_constraintTop_toBottomOf="@id/number4" />

    <Button
        android:id="@+id/number3"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/lightblue"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/_3"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@id/number2"
        app:layout_constraintTop_toBottomOf="@id/number4" />

    <Button
        android:id="@+id/slash"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/lightblue"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/slash"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@id/number3"
        app:layout_constraintTop_toBottomOf="@id/number4" />

    <Button
        android:id="@+id/nol"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/lightblue"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number1" />

    <Button
        android:id="@+id/kali"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/lightblue"
        android:gravity="center"
        android:padding="16dp"
        android:text="x"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@id/nol"
        app:layout_constraintTop_toBottomOf="@id/number1" />


    <Button
        android:id="@+id/samadengan"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/lightblue"
        android:gravity="center"
        android:padding="16dp"
        android:text="="
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@id/kali"
        app:layout_constraintTop_toBottomOf="@id/number1" />
</androidx.constraintlayout.widget.ConstraintLayout>
